Update Code for Semantic Segmentation with U-Net.ipynb

--- a/Code for Semantic Segmentation with U-Net.ipynb
+++ b/Code for Semantic Segmentation with U-Net.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -71,7 +71,7 @@
         "id": "wiGy1vQOzQLO",
         "outputId": "1881cdec-6cc2-4990-f8ea-60b80c765418"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "OKsik0HWj6HL"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "EyRSt4LSy7xH"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "mk8oydga5ltB"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -200,13 +200,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "UAA0qKRP6LOD",
         "outputId": "c9c7ff7b-17d5-4eb3-ffc1-05bfbe135c40"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -250,7 +249,7 @@
         "id": "rmmEjdjw8HJm",
         "outputId": "caa59501-342b-4c0f-8180-c8b26025b6bf"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +275,7 @@
         "id": "kN_uXdVd-ESE",
         "outputId": "b837fd7d-f623-4f79-fdd3-f0648ce80ae8"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +296,7 @@
       "metadata": {
         "id": "F4dn9ewu_seD"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,7 +312,7 @@
       "metadata": {
         "id": "dQpPXDFq_aJ9"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +325,7 @@
       "metadata": {
         "id": "iQEVEbkEAnxH"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +355,7 @@
       "metadata": {
         "id": "d8bkHsIbBl-S"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +372,7 @@
       "metadata": {
         "id": "lR4qjCe7Dw3y"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -396,7 +395,7 @@
       "metadata": {
         "id": "ssMBOWVyfyGh"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +416,7 @@
       "metadata": {
         "id": "0xfRneVZhfJY"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,13 +429,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "xYd6HtADigGp",
         "outputId": "fec25fc8-00bb-4c94-f813-f533f5415fd0"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -515,7 +513,7 @@
         "id": "ayDak4RHjYyE",
         "outputId": "613b3ef4-126b-4b0b-9faf-062a03cf1886"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,7 +949,7 @@
         "id": "Muwz3-sbkYv9",
         "outputId": "cbeb77dd-824f-4338-eeb8-a25bd7707c7d"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1364,7 +1362,7 @@
       "metadata": {
         "id": "8eh6uF2-mhBb"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1396,7 +1394,7 @@
       "metadata": {
         "id": "7dz0FDYEp6aD"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1412,7 +1410,7 @@
       "metadata": {
         "id": "KPiophZLnytm"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1437,23 +1435,23 @@
       "metadata": {
         "id": "6rt1J1NDrvRO"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#Show one example of image, mask and predicted mask where the model haven't undergoes training\n",
         "show_predictions()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9NNIGAQOr5L8",
         "outputId": "34e9b828-ff72-4f6b-c865-1eb753a4ad52"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1481,7 +1479,7 @@
       "metadata": {
         "id": "ANxxJJSpr-oJ"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1515,7 +1513,7 @@
         "id": "js9KDtiPsAS-",
         "outputId": "0fa691af-d86d-497d-cc3e-9342c6d73f66"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1555,7 +1553,7 @@
         "id": "p6QIsKs42FQ4",
         "outputId": "de0800f6-d140-4518-8546-1f6631a332e2"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1595,7 +1593,7 @@
         "id": "pgfFvKrisT0V",
         "outputId": "b325f5ad-3478-4ddf-efcf-fbaeb7e5f908"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1634,7 +1632,7 @@
         "id": "PKxHa295uDx5",
         "outputId": "06cf5531-10e4-47cd-e2c5-ec9ba69ca1ae"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
